# face_detector

./: CMakeLists.txt  README.md  creat_dataset.sh
config/: config.txt  label.txt  test.txt  train.txt
data/: data.txt
demo/: demo.cpp  detector_demo.cpp
include/face_detector/: face_detector.h  n_config.h
src/: face_detector.cpp  n_config.cpp
